# delphi-dev

./: .gitignore  README.md  duckdb_tests.py  polars_tests.py  pyproject.toml
learning-r/: Dockerfile.reticulate  Dockerfile.rockerverse  README.md  conformal-estimators.r
learning-r/advanced-r/: ch13.r  ch17-20.r  ch4.r
learning-r/fpp-reading-group/: ch2.r  ch3.r  ch5.r
learning-r/sta-36-350/: download-labs.sh  lab_01.Rmd  lab_02.Rmd  lab_03.Rmd  lab_04.Rmd  lab_05.Rmd  lab_11.Rmd  lecture1.r  lecture2.r  lecture3.r  lecture4.r  lecture5.r
src/: db.py
